capture_and_display

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,36 @@
 *.exe
 *.out
 *.app
+
+**/build/*
+**/devel/*
+.catkin_workspace
+*/src/CMakeLists.txt
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeHelloWorld.dir
+*.vcxproj*
+*.sln
+Debug
+x64
+.vscode
+CMakeHelloWorld
+build
+*.a
+__pycache__/*
+bin
+obj
+*/obj/*
+*/bin/*
+*/.vs/*
+
